fix: logout user after password change
